<resources>
    <string name="app_name">S2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Salin</string>
    <string name="nav_header_subtitle">crpaviotti@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_supermercados">Supermercados</string>
    <string name="menu_listas">Listas</string>
    <string name="menu_qr_code">QrCode</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nova_nota">Copiar outra nota</string>
    <string name="sair">Sair</string>
    <string name="copiado_com_sucesso">Copiado com sucesso</string>
    <string name="entrar">Entrar</string>
    <string name="nao_tem_uma_conta_registre_se">Não tem uma conta? Registre-se.</string>
    <string name="senha">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="usuario">Usuário</string>
    <string name="confirme_a_senha">confirme a Senha</string>
    <string name="registrar">Registrar</string>
    <string name="nome_do_usuario">Nome do usuário</string>
    <string name="salvar_perfil">Salvar perfil</string>
    <string name="descricao_da_foto">Descrição da foto</string>
    <string name="enviar_foto">Enviar Foto</string>
    <string name="listas_de_compras">Listas de compras</string>
    <string name="nova_lista">Criar nova lista</string>
    <string name="foto_da_galeria">Foto da galeria</string>

</resources>